FreeBSD Foundation.

This file contains major changes to ports and the ports infrastructure.
Intended audience are ports committers, maintainers and other
developers. User oriented changes should be submitted for inclusion
in the release notes and/or placed into UPDATING.

All ports committers are allowed to commit to this file.

20140505:
AUTHOR: bapt@FreeBSD.org

  :U and :L syntax is not supported anymore in the ports tree, :tu and :tl
  should be used instead

  This makes the ports tree incompatible with make(1) version that does not
  support :tu and :tl (aka FreeBSD 8.3 and earlier)

20140428:
AUTHOR: bapt@FreeBSD.org

  EXTRA_PATCHES has been extended to support a new syntax:

  EXTRA_PATCHES=	file:-pX

  Where X is the pathname strip count passed to patch(1)

20140423:
AUTHOR: tijl@FreeBSD.org

  The semantics of USES=libtool have changed.  It now deletes .la libraries
  from the staging area to reduce overlinking.  USES=libtool:keepla can be
  used in case they need to be kept.  This form still modifies .la libraries
  to remove references to other libraries to reduce overlinking.

  Note that .la libraries have to kept around as long as there are .la
  libraries from other ports that refer to them.  Those ports need to use
  some form of USES=libtool first such that those references are removed.

20140419:
AUTHOR: bdrewery@FreeBSD.org

  check-orphans has been renamed to check-plist. It now checks:
    A. Files in STAGEDIR that are missing from plist.
       To make check-plist ignore a file *as an orphan* do one of the
       following:
        1. Install it
        2. post-install: ${RM} ${STAGEDIR}file
        3. Put the file behind an OPTION with a PLIST_SUB: %%OPTION%%file
        4. Add to plist as a @comment
           @comment file
           @comment @dirrmtry dir
    B. Files in plist missing from STAGEDIR
    C. Files in plist which are owned by dependencies/MTREEs

20140416:
AUTHOR: bdrewery@FreeBSD.org
